--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu portfolio</title>
+  </head>
+  <body>
+    <header>
+      <img src="img/avatar-perfil.png" alt="avatar de Luiz">
+      <p>Eu sou Luiz</p>
+      <h1>Eu estudo Programação</h1>
+      <p>Sou estudante de programação no Ensino Médio</p>
+      <div>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>Scratch</p>
+      </div>
+    </header>
