--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu portfolio</title>
-  </head>
-  <body>
-    <header>
-      <img src="img/avatar-perfil.png" alt="avatar de Luiz">
-      <p>Eu sou Luiz</p>
-      <h1>Eu estudo Programação</h1>
-      <p>Sou estudante de programação no Ensino Médio</p>
-      <div>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Scratch</p>
-      </div>
-    </header>
+<DOCTYPE html>
+<html lang= "pt-br">
+<head>
+  <meta charset= "UTF-8">
+  <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+  <link rel= "stylesheet" href= "sttyle.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet
+  <title>Meu portifólio </title>
+</head>
+<body>
+  <header class= "container text-center">
+    <img scr= "img/avatar-perfil.png" class= "rounded-circle" width= "150" height="150" alt="avatar da Fernanda">
+    <p>Eu sou Fernanda</p>
+    <h1>Eu ensino programação</h1>
+    <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento 
+    computacional para estudantes do Ensino
+    Fundamental e Médio. Ensino sobre pensamento computacional
+    usando HTML, CSS e JavaScript. Veja os projetos
+    que já desenvolvi!</p>
+    <p>Minhas habilidades</p>
+    <div>
+      <p class="badge text-bg-secondary">HTML</p>
+      <p class="badge text-bg-secondary">CSS</p>
+      <p class="badge text-bg-secondary">JavaScript</p>
+      <p class="badge text-bg-secondary">Scratch</p>
+    </div>
+  </header>
+</body>
+</html>
